# dashplay-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
design/: README.md  widevine-license-renewal-and-key-rotation.md
examples/: capture_widevine_license.rs  play_gstreamer.rs  write_stream.rs
scripts/: generate-dashif-drm-fixture.sh
src/: abr_controller.rs  bola.rs  content_steering.rs  dash_stream.rs  delivered_segments.rs  descriptors.rs  lib.rs  manifest.rs  manifest_update.rs  media_events.rs  media_player.rs  metrics.rs  mod.rs  mp4_box.rs  partial_segment.rs  playback_control.rs  player.rs  prft.rs  resync.rs  segment_blacklist.rs  segment_fetcher.rs  stream_controller.rs  track_selection.rs  track_session.rs  types.rs  utc_timing.rs
src/abr/: bola.rs  constraints.rs  dropped_frames.rs  mod.rs
src/abr/bola/: algorithm.rs  factory.rs  mod.rs
src/abr/lol_plus/: algorithm.rs  factory.rs  mod.rs  qoe.rs  weight_selector.rs
src/clock/: latency_control.rs  mod.rs  resync.rs  service_description.rs  utc_timing.rs
src/cmcd/: cmsd.rs  encode.rs  keys.rs  mod.rs
src/drm/: cenc.rs  coordinator.rs  decrypt.rs  mod.rs  mp4.rs  mpd.rs  playback_error.rs  renewal.rs  stub.rs  widevine.rs
src/drm/cdm/: device.rs  error.rs  key.rs  mod.rs  pssh.rs  session.rs
src/drm/renewal/: mod.rs  policy.rs  state.rs
src/http/: body_stream.rs  error.rs  fetch.rs  mod.rs  request.rs  reqwest.rs  response.rs  retry.rs  stream_response.rs  unconfigured.rs
src/manifest/: addressing.rs  alignment.rs  availability.rs  base_url.rs  bitstream_switching.rs  dvr.rs  end_numbers.rs  error.rs  fetch.rs  inheritance.rs  metadata.rs  mod.rs  period.rs  period_connectivity.rs  switch_access.rs  template.rs  tests.rs  types.rs
src/manifest/addressing/: tests.rs
src/manifest/availability/: tests.rs
src/manifest/base_url/: tests.rs
src/manifest/end_numbers/: tests.rs
src/manifest/fetch/: tests.rs
src/manifest/period/: tests.rs
src/manifest/sidx/: mod.rs  parser.rs  tests.rs
src/manifest/timeline/: mod.rs  tests.rs
src/manifest/types/: tests.rs
src/manifest_lifecycle/: content_steering.rs  mod.rs  patch.rs  update.rs  xlink.rs
src/mp4/: emsg.rs  mod.rs  partial_segment.rs  prft.rs
src/platform/: mod.rs  native.rs  wasm.rs
src/schedule/: adaptation_stream.rs  buffer_target.rs  fetch.rs  mod.rs  parallel_prefetch.rs  segment_decrypt.rs  segment_emit.rs  segment_fetch.rs  segment_plan.rs  sync_prefetch.rs
src/segment/: error.rs  mod.rs
src/stream_controller/: manifest_loop.rs  mod.rs  mpd_events.rs  period_context.rs  sync_prefetch.rs
src/track_selection/: descriptors.rs  info.rs  kind.rs  mod.rs  preselection.rs  select.rs  sub_representation.rs  switching.rs  tests.rs
tests/: abr.rs  buffer_scheduling.rs  cmcd.rs  dashif.rs  drm.rs  live.rs  manifest_update.rs  media_events.rs  playback.rs  playback_control.rs
tests/common/: drm.rs  mod.rs
tests/conformance/: iop_validate.rs  mod.rs
tests/fixtures/base_url_all_bad/: manifest.mpd
tests/fixtures/base_url_failover/: manifest.mpd
tests/fixtures/dashif_bandwidth/: V300-300000-2.m4s  manifest.mpd
tests/fixtures/dashif_drm_encrypted/: manifest.mpd  segment-1.0001.m4s
tests/fixtures/dashif_rep_template/: manifest.mpd
tests/fixtures/dashif_simple/: manifest.mpd
tests/fixtures/dashif_subtitle/: manifest.mpd
tests/fixtures/dashif_trick_play/: manifest.mpd
tests/fixtures/drm_cbcs/: manifest.mpd  segment-1.m4s
tests/fixtures/drm_cenc/: manifest.mpd  segment-1.m4s
tests/fixtures/drm_in_band_init/: manifest.mpd
tests/fixtures/drm_widevine/: manifest.mpd
tests/fixtures/drm_widevine_rotate/: manifest_v1.mpd  manifest_v2.mpd  seg-1.m4s  seg-10.m4s  seg-13.m4s  seg-15.m4s  seg-2.m4s  seg-3.m4s  seg-4.m4s  seg-6.m4s  seg-7.m4s  seg-8.m4s
tests/fixtures/events_vod/: manifest.mpd  seg-1.m4s
tests/fixtures/live_duration/: manifest.mpd  seg-1.m4s  seg-2.m4s  seg-3.m4s  seg-4.m4s  seg-5.m4s  seg-6.m4s
tests/fixtures/live_refresh/: seg-11.m4s  seg-12.m4s  seg-14.m4s  seg-5.m4s  seg-9.m4s
tests/fixtures/live_static_duration/: manifest.mpd  seg-1.m4s  seg-2.m4s  seg-3.m4s  seg-4.m4s
tests/fixtures/live_timeline/: manifest.mpd  seg-1.m4s  seg-10.m4s  seg-2.m4s  seg-3.m4s  seg-4.m4s  seg-5.m4s  seg-6.m4s  seg-7.m4s  seg-8.m4s  seg-9.m4s
tests/fixtures/subtitle_inband_stpp/: manifest.mpd  stpp-1.m4s  stpp-2.m4s
tests/fixtures/subtitle_ttml/: manifest.mpd  sub-1.xml  sub-2.xml  sub-init.xml
tests/fixtures/subtitle_vtt/: caption-1.vtt  caption-2.vtt  manifest.mpd  seg-2.m4s
tests/fixtures/thumbnail_bmp/: manifest.mpd  seg-2.m4s
tests/fixtures/thumbnail_jpeg/: manifest.mpd
tests/fixtures/thumbnail_png/: manifest.mpd  seg-1.m4s
tests/fixtures/vod_abr/: high-seg-1.m4s  high-seg-2.m4s  manifest.mpd
tests/fixtures/vod_ac4/: manifest.mpd  seg-1.m4s  seg-2.m4s
tests/fixtures/vod_as_switching/: avc-seg-1.m4s  avc-seg-2.m4s  hevc-seg-1.m4s  hevc-seg-2.m4s  manifest.mpd
tests/fixtures/vod_av/: audio-seg-1.m4s  audio-seg-2.m4s  manifest.mpd  video-seg-1.m4s  video-seg-2.m4s
tests/fixtures/vod_dvb_hbbtv/: fb-seg-1.m4s  fb-seg-2.m4s  manifest.mpd
tests/fixtures/vod_end_number/: manifest.mpd  seg-1.m4s
tests/fixtures/vod_mha1/: manifest.mpd  seg-1.m4s  seg-2.m4s
tests/fixtures/vod_missing_segment/: manifest.mpd
tests/fixtures/vod_mp2t/: manifest.mpd  seg-1.ts  seg-2.ts
tests/fixtures/vod_multi_audio/: audio-en-seg-1.m4s  audio-en-seg-2.m4s  audio-fr-seg-1.m4s  audio-fr-seg-2.m4s  manifest.mpd  video-seg-1.m4s  (+1 more)
wasm/dashplay-wasm/: Cargo.toml  README.md  package-lock.json
wasm/dashplay-wasm/src/: fetch_client.rs  lib.rs
wasm/dashplay-wasm/web/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
wasm/dashplay-wasm/web/public/: _headers
wasm/dashplay-wasm/web/scripts/: check-pkg.mjs
wasm/dashplay-wasm/web/src/: App.tsx  Readme.tsx  index.css  theme.ts  types.ts  vite-env.d.ts  wasi_snapshot_preview1.ts
wasm/dashplay-wasm/web/src/mse/: boxes.ts  player.ts  session.ts  subtitle-session.ts  subtitles.ts
(+48 files in other folders)
