[package]
name = "dashplayrs"
version = "0.1.0"
edition = "2024"
description = "A pure Rust MPEG-DASH player library"
readme = "README.md"
keywords = ["dash", "mpeg-dash", "streaming", "video", "abr"]
categories = ["multimedia::video", "web-programming::http-client"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dash-mpd = "0.20.2"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
mp4decrypt = "0.6.1"
pssh-box = "0.2.4"
quick-xml = "0.39.2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "cookies"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2.5"
widevine = "0.1.0"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
name = "dashplayrs"
path = "src/lib.rs"
