[package]
name = "dashplay-wasm"
version = "0.1.0"
edition = "2024"
publish = false
description = "Browser WASM proof-of-concept renderer for dashplayrs (clear streams only)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1"
console_error_panic_hook = "0.1"
dashplayrs = { path = "../..", default-features = false }
futures-util = "0.3"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros", "time"] }
url = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
